[package]
name = "pf"
version = "0.1.0"
edition = "2021"

[dependencies]
structopt = "0.3"
libc = "0.2"
nix = "0.11"
pcap = { version = "0.10", features = ["capture-stream"] }
etherparse = "0.12.0"
macaddr = "1.0.1"
pcre2 = "0.2.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"]}
tokio-stream = {version = "0.1", features = ["sync", "net", "signal"]}
chrono = "0.4.22"
colored = "2.0.0"

[target.'cfg(unix)'.dependencies]
signal = "0.6"

[target.'cfg(any(linux, windows))'.dependencies]
affinity = "0.1.2"
